# info_extract

./: .env  .gitignore  AGENTS.md  QWEN.md  README.md  env.example  pyproject.toml
.github/workflows/: main.yml
config/: email.yaml  output.yaml  spreadsheet_00000.txt  spreadsheet_00001.txt  spreadsheet_00002.txt  standard.db
docs/: extract.md  introduction.md  llms.txt
docs/changes/add-cancel_task/: design.md  proposal.md  tasks.md
docs/changes/add-cancel_task/specs/cancel/: spec.md
docs/changes/add-mark_extracts/: design.md
docs/changes/add-pdf_source/: proposal.md  tasks.md
docs/changes/add-pdf_source/specs/pdf/: spec.md
docs/changes/add-standard_config/: proposal.md
docs/changes/add-standard_config/specs/config/: spec.md
docs/changes/add-ui/: proposal.md  spec.md  tasks.md
docs/changes/img2json/: proposal.md  spec.md  tasks.md
docs/changes/xlsx2png/: proposal.md  spec.md  tasks.md
docs/specs/config/: spec.md
docs/specs/config/mark_extracts/: design.md  proposal.md  spec.md  tasks.md
docs/specs/destination/: spec.md
docs/specs/extract/: spec.md
docs/specs/source/: spec.md
docs/specs/ui/: spec.md  task_cancel_spec.md  templates_spec.md
docs/ui/: README.md  extract_mark.html  index.html  ui-demo.html
docs/ui/config/: info_item.html
docs/ui/static/: styles.css
src/info_extract/: __init__.py  executor.py  log_setup.py  main.py  pipeline.py  start_ui_server.py  ui.py
src/info_extract/ace/: __init__.py  curator_agent.py  model.py  playbook.py  reflector_agent.py
src/info_extract/config/: __init__.py  config_db.py  config_models.py  config_utils.py  profile_manager.py
src/info_extract/config/migrations/: migrate_to_profile_support.py
src/info_extract/destination/: __init__.py  excel_export.py
src/info_extract/extract/: __init__.py  dataframe_mapping_extract.py  example.py  plain_extract.py  spreadsheet_extract.py  tokenizer.py  type.py
src/info_extract/extract/qwen/: __init__.py  provider.py  schema.py
src/info_extract/route/: __init__.py  config.py  task.py  tools.py
src/info_extract/source/: __init__.py  email.py  eml.py  excel.py  msg.py
src/info_extract/utils/: __init__.py  excel.py  image2json.py  model.py  use_layout_view.py
src/info_extract/web/: info_item.html  main.html  mark_extracts.html  styles.css
tests/: DNCP.txt  test_config_utils.py  test_email_reader.py  test_excel_export.py  test_excel_header_detection.py  test_excel_reader.py  test_excel_to_png.py  test_executor.py  test_langextract_tokenizer.py  test_mark_extracts_api.py  test_plain_extractor.py  test_profile_functionality.py  test_recognize_image.py  test_semantic_header_normalizer.py  test_spreadsheet_extractor.py  test_ui.py
tests/files/: test1.xls
web/: info_item.html  main.html
