[project]
name = "info-extract"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chardet>=5.2.0",
    "duckdb>=1.4.1",
    "extract-msg",
    "fastparquet>=2024.11.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langextract>=1.0.9",
    "markdownify>=1.2.0",
    "msg-parser[rtf]>=1.2.0",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "openpyxl>=3.1.5",
    "pkuseg>=0.0.25",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.6.0",
    "python-dotenv>=1.1.1",
    "regex>=2025.10.23",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "xlrd>=2.0.2",
    "pillow>=12.1.0",
    "pywin32>=311",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]


[dependency-groups]
dev = [
    "modelscope>=1.31.0",
]

[project.scripts]
info-extract = "info_extract:async_main"
info-ui = "info_extract:start_server"

